--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,80 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 1rem;
+	line-height: 1.5;
+	color: #fff;
+	overflow-x: hidden;
+}
+
+.v-header {
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	color: #fff;
+}
+
+.container {
+	max-width: 960px;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	margin: auto;
+	text-align: center;
+}
+
+.fullscreen-video-wrap {
+	position: absolute;
+	top: o;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+}
+
+.fullscreen-video-wrap video {
+	min-width: 100%;
+	min-height: 100%;
+}
+
+.header-overlay {
+	height: 100vh;
+	width: 100vw;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: black;
+	z-index: 1;
+	opacity: 0.45;
+}
+
+.header-content {
+	z-index: 2;
+}
+
+.header-content h1 {
+	font-size: 50px;
+	margin-bottom: 0;
+}
+
+.header-content p {
+	font-size: 1.5rem;
+	display: block;
+	padding-bottom: 2rem;
+}
+
+.btn {
+	background: blueviolet;
+	color: #fff;
+	font-size: 1.2rem;
+	padding: 1rem 2rem;
+	text-decoration: none;
+	border-radius: 8px;
+}
+
+.btn:active {
+	transform: translateY(10px);
 }
